# Congo

./: CMakeLists.txt  LICENSE  README.md
include/: AdvancedEvaluation.h  AdvancedEvaluator.h  Agent.h  Board.h  Evaluator.h  GiraffeMoveGenerator.h  LionMoveGenerator.h  MaterialEvaluator.h  Move.h  MoveGenerator.h  MyTimer.h  PawnMoveGenerator.h  Piece.h  SuperPawnMoveGenerator.h  ZebraMoveGenerator.h
src/: AdvancedEvaluator.cpp  Agent.cpp  Board.cpp  Evaluator.cpp  GiraffeMoveGenerator.cpp  LionMoveGenerator.cpp  MaterialEvaluator.cpp  MoveGenerator.cpp  MyTimer.cpp  PawnMoveGenerator.cpp  SuperPawnMoveGenerator.cpp  ZebraMoveGenerator.cpp  main.cpp
